--- a/front/createCard.html
+++ b/front/createCard.html
@@ -64,7 +64,7 @@
                   </select>
               
                 </div>
-                <label for="avatar" class="avatar-file"><i class="fa-solid fa-image"></i>Choisis ton Avatar</label>
+                <label for="avatar" class="avatar-file"><i class="fa-solid fa-image"></i>Choisis ton Avatar (png ou jpg)</label>
 
 <input type="file"
        id="avatar" name="avatar"  class="input-avatar"
