--- a/front/packOpener.html
+++ b/front/packOpener.html
@@ -45,11 +45,11 @@
                 <img id="1" src="./pokemon-cards/base set (10).jpg">
             </div> -->
         </div>
-        <script src="html2canvas.js" ></script>
         <script src="saveAs.js" ></script>
-        <!-- <script src="toBlob.js" ></script> -->
-        <!-- <script src="./node_modules/dom-to-image-more/dist/dom-to-image-more.min.js" ></script> -->
-        <script src="./node_modules/dom-to-image/dist/dom-to-image.min.js" ></script>
+       
+     
+        <!-- <script src="../dom-to-image/dist/dom-to-image.min.js" ></script> -->
+   
         <script src =navbar.js></script>
         <script type="module" src="./packOpener.js"></script>
     </body>
